# mesonbug

./: main.cpp  meson.build
MyLib/: MyLib.cpp
